# clean-build

./: .cursorrules  .gitignore  AGENTS.md  ARBITER_COMMAND.md  CURSOR_HANDSHAKE.md  HAZEL_DO_NOT_INGEST.txt  IMPLEMENTATION_PLAN.md  KEN_HUANG_DOCTRINE_COMPILED.md  MCP_SERVERS.md  README.md  RESEARCH_HERMES_AND_COMPOUND_ENGINEERING.md  SKILL_EXECUTION.md  STATUS.md  mcp-servers.json
02_build/amplified-knowledge-mcp/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
02_build/amplified-knowledge-mcp/src/amplified_knowledge_mcp/: __init__.py  audit.py  config.py  embedder.py  falkordb_client.py  qdrant_client.py  security.py  server.py
02_build/beast-control-mcp/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
02_build/beast-control-mcp/src/beast_control_mcp/: __init__.py  audit.py  config.py  server.py
02_build/beast-control-mcp/src/beast_control_mcp/tools/: __init__.py  classification.py  code_discovery.py  databases.py  filesystem.py  (+2 more)
02_build/hermes/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
02_build/hermes/config/: channels.yaml  hermes.yaml  spine.mount
02_build/hermes/config/policies/: hermes.cedar
02_build/hermes/docs/: integration-spec.md
02_build/hermes/scripts/: deploy.sh  seed_spine.sh  start.sh
02_build/hermes/src/hermes/: __init__.py  main.py  singleton.py  state_machine.py  ticker.py
02_build/hermes/state/: .gitkeep
02_build/hermes/tests/: conftest.py
02_build/hermes/tests/e2e/: test_synthetic_proving_run.py
02_build/hermes/tests/fixtures/: synthetic_plan.md  synthetic_run.json
02_build/hermes/tests/integration/: test_cedar_tier3.py  test_resume_after_crash.py  test_singleton_lock.py  test_state_persists.py
02_build/sovereign-fleet/agent/: Dockerfile  pyproject.toml
02_build/sovereign-fleet/agent/src/: actions.py  config.py  health.py  ibac.py  llm.py  main.py
02_build/sovereign-fleet/agent/tests/: test_ibac.py
02_build/validators/: .gitignore  README.md  __init__.py  __main__.py  cache.py  cli.py  core.py  pyproject.toml  requirements.txt  test_validators.py
02_build/validators/results/: INS-001.json  INS-002.json  INS-006.json  INS-007.json  INS-018.json  INS-022.json
02_build/validators/retail/: .gitignore  README.md  __init__.py  cli.py  verdict.py
02_build/validators/retail/fetchers/: common.py  companies_house.py  epc.py  insolvency_stats.py  land_registry.py  met_office.py  nomis.py  ons_beta.py  police_uk.py  pytrends_local.py
02_build/validators/retail/insights/: __init__.py  ins_060_footfall.py  ins_061_stockout.py  ins_062_price_elasticity.py  ins_063_commercial_voids.py  ins_064_competitor_death_spiral.py  ins_065_ltv_postcode.py  ins_066_google_trends.py  ins_067_shrinkage_crime.py  ins_068_marketplace_fees.py  ins_069_category_cannibalisation.py  ins_070_supplier_concentration.py  ins_071_energy_cost.py  ins_072_return_fraud.py  ins_073_loyalty_roi.py  ins_074_share_of_voice.py  ins_075_review_text_drift.py  ins_076_support_ticket_churn.py  ins_077_product_description_match.py  ins_078_chat_sentiment.py
02_build/validators/retail/scripts/: update_catalogue.py
02_build/validators/retail/tests/: __init__.py  base_rate.py  correlation.py  distribution.py  existence.py  test_existence.py
02_build/validators/sources/: __init__.py  _http.py  companies_house.py  gazette.py  gov_uk.py  hmrc.py  met_office.py  ons.py
02_build/validators/src/validators/: __init__.py  __main__.py  cli.py  core.py
02_build/validators/tests/: __init__.py  base_rate.py  correlation.py  distribution.py  existence.py  test_catalogue_upsert.py  test_test_classes.py
02_build/validators/unit_tests/: test_base_rate.py  test_http_cache.py
02_build/validators/validations/: __init__.py  profservices.py
02_build/validators/verticals/: hospitality.py
(+2280 files in other folders)
