# Authored by Devon-6264, 2026-05-03 (session devin-6264b0ba42c6453b86b166bebc3d868a)
[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ap-validators"
version = "0.1.0"
description = "Public-data validators for the Amplified Partners insight catalogue"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Devon (Devin)", email = "devin@amplifiedpartners.ai" }]
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0",
]

[project.scripts]
ap-validators = "validators.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"validators" = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
